--- a/Views/Components/SearchBar.xaml
+++ b/Views/Components/SearchBar.xaml
@@ -25,19 +25,18 @@
                        IsHitTestVisible="False" Visibility="{Binding _showPreview, ElementName=searchBar}"/>
             <TextBox
                 BorderThickness="0"
-                KeyDown="SearchText"
                 x:Name="searchBox"
                 Background="Transparent"
                 Margin="25,0,0,0"
                 ToolTip="Search for a contact using their name"
                 TextWrapping="Wrap"
-                SelectionChanged="textBox_SelectionChanged"
                 VerticalContentAlignment="Center"
                 HorizontalContentAlignment="Left"
                 Focusable="True"
                 AcceptsReturn="True"
                 AcceptsTab="True"
-                TextChanged="TextChanged" 
+                TextChanged="TextChanged"
+                PreviewKeyDown="InitiateSearch"
                 BorderBrush="{x:Null}" SelectionBrush="#FFB8B3C5" 
                 Foreground="{StaticResource On Surface}" 
                 CaretBrush="{StaticResource On Surface}" 
