--- a/Views/Components/ListContactItem.xaml
+++ b/Views/Components/ListContactItem.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ContactBook.Views.Components"
              mc:Ignorable="d"
-             d:DataContext="{d:DesignInstance {x:Type local:ListContactItem}}"
+             d:DataContext="{d:DesignInstance local:ListContactItem}"
              xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
              BorderThickness="0"
              BorderBrush="{x:Null}"
