Began working on contact retrieval by search.

--- a/Views/Components/SearchBar.xaml
+++ b/Views/Components/SearchBar.xaml
@@ -33,7 +33,7 @@
                 VerticalContentAlignment="Center"
                 HorizontalContentAlignment="Left"
                 Focusable="True"
-                AcceptsReturn="True"
+                AcceptsReturn="False"
                 AcceptsTab="True"
                 TextChanged="TextChanged"
                 PreviewKeyDown="InitiateSearch"
