--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -112,7 +112,7 @@
                 </DockPanel>
 
                 <!--Current View Model-->
-                <ContentControl Content="{Binding CurrentViewModel}"
+                <ContentControl Content="{Binding SelectedContactViewModel}"
                     Grid.Column="2" Grid.Row="1" Grid.RowSpan="2"/>
 
                 <!--Header/Content divider-->
@@ -127,7 +127,8 @@
                                       HorizontalAlignment="Center"  
                                       VerticalAlignment="Center" 
                                       Height="30" Width="Auto"
-                                      PreviewKeyDown="InitiateSearch"/>
+                                      PreviewKeyUp="InitiateSearch"
+                                      />
 
 
                 <!--Window Controls-->
@@ -161,10 +162,9 @@
             </Grid>
 
             <ContentControl Content="{Binding EditAddContactViewModel}" Width="480"
-                            Background="BlanchedAlmond"
-                            HorizontalAlignment="Right" 
-                            VerticalAlignment="Stretch"/>
-
+                                Background="BlanchedAlmond"
+                                HorizontalAlignment="Right" 
+                                VerticalAlignment="Stretch"/>
         </Grid>
     </Border>
 </Window>
